[Fix] Navbar z-index and background image.

--- a/ui/src/styles/global.scss
+++ b/ui/src/styles/global.scss
@@ -29,6 +29,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 h1 {
